# fastdigest

./: .gitignore  API.md  API_Reference.ipynb  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES  benchmark.py  fastdigest.pyi  pyproject.toml
.github/workflows/: build.yml
src/: lib.rs  tdigest.rs
tests/: test_merge_all.py  test_tdigest.py  utils.py
