[package]
name = "fastdigest"
version = "0.10.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ordered-float = "5.0"
parking_lot = "0.12"
pyo3 = { version = "0.26", features = ["extension-module"] }
serde = { package = "serde", version = "1.0", optional = true, default-features = false }

[features]
use_serde = ["serde", "serde/derive", "ordered-float/serde"]
